--- a/WebAutoLogin/Controls/PingStatistics/PingStatisticsControl.xaml
+++ b/WebAutoLogin/Controls/PingStatistics/PingStatisticsControl.xaml
@@ -9,29 +9,8 @@
              d:DataContext="{d:DesignInstance Type=local:PingStatisticsData, IsDesignTimeCreatable=True}">
     <DockPanel>
         <StackPanel Orientation="Horizontal" DockPanel.Dock="Right">
-            <TextBlock VerticalAlignment="Center" Margin="10 0">
-                <TextBlock.Style>
-                    <Style TargetType="{x:Type TextBlock}">
-                        <Setter Property="Foreground" Value="#08F" />
-                        <Style.Triggers>
-                            <DataTrigger Binding="{Binding LatencyQualityIndex}" Value="4">
-                                <Setter Property="Foreground" Value="#0BB" />
-                            </DataTrigger>
-                            <DataTrigger Binding="{Binding LatencyQualityIndex}" Value="3">
-                                <Setter Property="Foreground" Value="#0B0" />
-                            </DataTrigger>
-                            <DataTrigger Binding="{Binding LatencyQualityIndex}" Value="2">
-                                <Setter Property="Foreground" Value="#BB0" />
-                            </DataTrigger>
-                            <DataTrigger Binding="{Binding LatencyQualityIndex}" Value="1">
-                                <Setter Property="Foreground" Value="#F80" />
-                            </DataTrigger>
-                            <DataTrigger Binding="{Binding LatencyQualityIndex}" Value="0">
-                                <Setter Property="Foreground" Value="#800" />
-                            </DataTrigger>
-                        </Style.Triggers>
-                    </Style>
-                </TextBlock.Style>
+            <TextBlock VerticalAlignment="Center" Margin="10 0"
+                       Foreground="{Binding LatencyColor}">
                 <TextBlock.ToolTip>
                     <StackPanel>
                         <TextBlock>
